Add uuid dependency for generating unique IDs

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^11.3.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
-    "openai": "^5.7.0"
+    "openai": "^5.7.0",
+    "uuid": "^11.1.0"
   }
 }
