--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "openai": "^5.7.0",
+    "pdfkit": "^0.14.0",
     "sharp": "^0.34.2",
     "uuid": "^11.1.0"
   }
